<resources>
    <string name="app_name">Movies Now</string>
    <string name="contentImage">Poster Movie</string>
    <string name="title">Title</string>
    <string name="date">Release date</string>
    <string name="vote_average">Vote average</string>
    <string name="vote_count">Vote count</string>
    <string name="overview">Overview</string>
    <string name="trailer">Trailer</string>
    <string name="review">Review</string>
    <string name="Video">Trailer Youtube</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="display_fav">Favorite</string>


    <!-- Label for the sort preference -->
    <string name="pref_sort_label">Sort</string>
    <string name="pref_sort_top_rate_label">Top rated</string>
    <string name="pref_sort_popular_label">Popular</string>

    <!-- Key for the sort preference -->
    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="pref_sort_top_rates" translatable="false">top_rated</string>
    <string name="pref_sort_popular" translatable="false">popular</string>

    <string name="pref_general_label">General</string>

    <string name="add2Fav">Add to favorite</string>


</resources>
